Fixed some alignments on the Login and MyProfile pages.

--- a/src/styles/pages/Home.module.css
+++ b/src/styles/pages/Home.module.css
@@ -1,7 +1,6 @@
 .container {
   height: 100vh;
   max-width: 100%;
-  margin: 0 auto;
 
   display: flex;
   flex-direction: column;
@@ -12,8 +11,7 @@
   max-width: 992px;
   flex: 1;
   display: grid;
-  grid-template-columns: 3fr 4fr;
-
+  justify-content: center;
   align-content: center;
 }
 
@@ -28,6 +26,10 @@
 }
 
 .container section div strong {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
   margin-top: 5rem;
   font-size: 2.5rem;
   font-weight: 500;
@@ -42,25 +44,47 @@
 
 .gitTitleStyle span {
   display: flex;
+  justify-content: center;
   align-items: center;
   font-size: 1.25rem;
   font-weight: 600;
   color: var(--white);
 }
 
-.inputUserDiv {
-  display: "flex";
-  justify-content: "space-between";
+.inputAndButtonDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 0 1rem;
 }
 
-.inputUserDiv input {
-  width: "80%";
-  border-radius: "10px";
-  height: "9vh";
+.inputAndButtonDiv input {
+  width: 75%;
+  border: none;
+  border-radius: 5px;
+  height: 3.5rem;
+  padding: 0 0 0 1em;
+  box-shadow: 0 0 60px rgba(0, 0, 0, 0.3);
 }
 
-.inputUserDiv button {
-  width: "15%";
-  border-radius: "10px";
-  height: "9vh";
+.inputAndButtonDiv input:focus {
+  outline: none;
+}
+
+.inputAndButtonDiv button {
+  width: 15%;
+  border-radius: 5px;
+  height: 3.5rem;
+  border: none;
+  box-shadow: 0 0 60px rgba(0, 0, 0, 0.3);
+
+  transition: background-color 0.2s;
+}
+
+.inputAndButtonDiv button:hover {
+  background: #baeaff;
+}
+
+.inputAndButtonDiv button:focus {
+  outline: none;
 }
